# the-sieve

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  STYLE_GUIDE.md  STYLE_GUIDE.typ  sample.md  test.typ
.github/workflows/: release.yml
app/: Cargo.toml  tauri.conf.json
app/capabilities/: default.json
app/src/: lib.rs  main.rs
app/ui/: index.html
licenses/: OGL-1.0a.txt
modules/chaotic-caves/: chaotic-caves.md  chaotic-caves.mdp
modules/chaotic-caves-revised/: chaotic-caves-revised.md
src/: ast.rs  cli.rs  error.rs  lib.rs  licenses.rs  main.rs
src/parser/: extensions.rs  markdown.rs  mod.rs
src/renderer/: html.rs  mod.rs  pdf.rs  typst.rs
templates/: default.typ
