[workspace]
members = ["app"]

[package]
name = "the-sieve"
version = "1.2.0"
edition = "2021"
description = "A CLI tool to convert TTRPG markdown to half-letter PDFs for booklet printing"
license = "MIT"

[dependencies]
pulldown-cmark = "0.10"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
krilla = "0.7"
parley = "0.6"

[profile.release]
opt-level = 3
lto = true
