[package]
name = "the-sieve-app"
version = "1.0.0"
edition = "2021"
description = "Desktop app that watches a markdown file and rebuilds the PDF on every save."
license = "MIT"

[lib]
name = "the_sieve_app_lib"
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "the-sieve-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
the-sieve = { path = ".." }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
notify-debouncer-mini = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
